need to follow todo

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
 add berries to item list
 
-fix retriving pokemon that are banned/shit
+fix galarian
+
+experiment with "my pokemon"
+
+move power and accuracy, move type
