tweaked server and moved to aws hosting, added many comments, and deleted stuff i dont need anymore

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,9 @@
-add tooltips for spreads, moves, abilties, basic explaitions for each table
-fuzzywuzzy for formats (DONE)
+add shiny button
+add tera types tab
+add warnings
+add elastic load balencer and auto scaling group
+make a boot script, HAVENT TESTED
+polish code and remove not needed prints and blocks of code that are not longer important, DONEISH
+some comments
+make it say secure so i feel secure
+make preinstallformat, DONE
